test/Fail/Issue2442-terminating.agda
{-# OPTIONS --safe #-}

module Issue2442-terminating where

{-# NON_TERMINATING #-}
f : Set
f = f
